@@ -8,12 +8,27 @@
  */
 class XCacheBagOStuff extends BagOStuff {
 	/**
+	 * Are we operating in CLI mode? Since xcache doesn't work then and they 
+	 * don't want to change that
+	 * @see bug 28752
+	 * @var bool
+	 */
+	private $isCli = false;
+
+	public function __construct() {
+		$this->isCli = php_sapi_name() == 'cli';
+	}
+
+	/**
 	 * Get a value from the XCache object cache
 	 *
 	 * @param $key String: cache key
 	 * @return mixed
 	 */
 	public function get( $key ) {
+		if( $this->isCli ) {
+			return false;
+		}
 		$val = xcache_get( $key );
 
 		if ( is_string( $val ) ) {
@@ -32,8 +47,9 @@ class XCacheBagOStuff extends BagOStuff {
 	 * @return bool
 	 */
 	public function set( $key, $value, $expire = 0 ) {
-		xcache_set( $key, serialize( $value ), $expire );
-
+		if( !$this->isCli ) {
+			xcache_set( $key, serialize( $value ), $expire );
+		}
 		return true;
 	}
 
@@ -45,8 +61,9 @@ class XCacheBagOStuff extends BagOStuff {
 	 * @return bool
 	 */
 	public function delete( $key, $time = 0 ) {
-		xcache_unset( $key );
-
+		if( !$this->isCli ) {
+			xcache_unset( $key );
+		}
 		return true;
 	}
 }
